# pgpcrypto

./: .gitignore  Dockerfile.build.al2  Dockerfile.build.al2023  Dockerfile.test  Dockerfile.test.py3.10  Dockerfile.test.py3.12  Dockerfile.test.py3.13  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: test.pub.asc  test.sec.asc
data/responses/: get_keys.json  get_recipients.json  import_public_key.json
examples/: lambda_function.py  lambda_function_multiple_recipients.py
pgpcrypto/: pgp.py
scripts/: build.sh  build_gpg.sh  build_layer.sh  release-experian.sh  release.sh  release_layer.sh  s3_gpg_cache.sh  update_version.sh
tests/: lambda.py  test_pgp.py
